Bug 378704 - [Wayland] {min,max}ize, close buttons do not work on next window
Summary: [Wayland] {min,max}ize, close buttons do not work on next window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 5.9.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 385787 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-12 16:47 UTC by Germano Massullo (Thetra)
Modified: 2017-10-15 15:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Germano Massullo (Thetra) 2017-04-12 16:47:30 UTC
Imagine you have more than one maximized window: let's assume you have for example three windows.
Then:
1) you click on minimize on the current window;
2) the current window minimizes;
3) then you get the second window and you want to minize it too, so ***without moving the mouse*** you click again;
4) the minimize button will not work/react until you move the mouse pointer
Comment 1 Germano Massullo (Thetra) 2017-04-12 16:47:46 UTC
The same situation happens with close button
Comment 2 Martin Flöser 2017-04-27 04:57:06 UTC
Sounds like no enter event is sent to the decoration.
Comment 3 Martin Flöser 2017-10-04 19:05:44 UTC
Patch for maximize: https://phabricator.kde.org/D8016
Patch for minimize: https://phabricator.kde.org/D8145

For close I cannot reproduce the issue.
Comment 4 Martin Flöser 2017-10-15 14:39:13 UTC
Git commit 1b01f1b3009474cc41d5c58318c1f3791fcff0fa by Martin Flöser.
Committed on 15/10/2017 at 14:38.
Pushed by graesslin into branch 'Plasma/5.11'.

Update pointer position whenever a window gets (un)minimized

Summary:
This fixes the following problem:
1. Have two windows maximized
2. Click minimize button on first window
3. Click minimize button on second window

What happened:
Second click was ignored as the pointer was not updated.
FIXED-IN: 5.11

Test Plan:
Nested KWin/Wayland, added two maximized windows, minimized
both without moving the mouse

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D8145

M  +1    -0    pointer_input.cpp
M  +1    -0    workspace.cpp
M  +1    -0    workspace.h

https://commits.kde.org/kwin/1b01f1b3009474cc41d5c58318c1f3791fcff0fa
Comment 5 Martin Flöser 2017-10-15 15:53:04 UTC
*** Bug 385787 has been marked as a duplicate of this bug. ***